--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-torch==2.4.1
-torchaudio==2.4.1
-librosa==0.10.2.post1
-numpy==2.0.2
-tqdm==4.66.5
-pydub==0.25.1
-pytubefix==8.0.0
+librosa>=0.10.2.post1
+tqdm>=4.66.5
+pydub>=0.25.1
+pytubefix>=8.0.0
 
 
